# synara

./: CMakeLists.txt  Makefile  README.md  mnist_cnn_checkpoint.syn
.github/agents/: synara-ml-framework.agent.md
cmake/: scaffold_test.cmake
examples/: 00_tensor_basics.cpp  01_ops_basics.cpp  02_autograd_basics.cpp  03_linear_regression.cpp  04_xor_mlp.cpp  05_conv2d_basics.cpp  06_pooling_basics.cpp  07_avg_pooling_basics.cpp  08_conv2d_advanced.cpp  09_mnist_cnn.cpp  10_parallel_bench.cpp
include/: synara.hpp
include/synara/autograd/: backward.hpp  edge.hpp  engine.hpp  no_grad.hpp  node.hpp  nodes.hpp
include/synara/core/: error.hpp  parallel.hpp  profiler.hpp  types.hpp
include/synara/data/: dataloader.hpp  dataset.hpp
include/synara/metrics/: metrics.hpp
include/synara/nn/: avgpool2d.hpp  batch_norm.hpp  conv2d.hpp  dropout.hpp  gelu.hpp  layer_norm.hpp  leaky_relu.hpp  linear.hpp  maxpool2d.hpp  module.hpp  module_utils.hpp  parameter.hpp  relu.hpp  sequential.hpp  sigmoid.hpp  softmax.hpp  tanh.hpp
include/synara/ops/: activation.hpp  convolution.hpp  elementwise.hpp  linalg.hpp  loss.hpp  math.hpp  pooling.hpp  reduction.hpp  shape.hpp
include/synara/optim/: adam.hpp  adamw.hpp  clip_grad.hpp  grad_clip.hpp  lr_scheduler.hpp  optimizer.hpp  rmsprop.hpp  sgd.hpp
include/synara/serialize/: state_dict.hpp
include/synara/tensor/: shape.hpp  slice.hpp  storage.cpp.h  storage.hpp  strides.hpp  tensor.hpp  tensor_impl.hpp  tensor_types.hpp
include/synara/train/: trainer.hpp
include/synara/visualization/: plot.hpp
src/autograd/: engine.cpp  no_grad.cpp  nodes.cpp
src/core/: parallel.cpp  profiler.cpp
src/data/: dataloader.cpp  dataset.cpp
src/metrics/: metrics.cpp
src/nn/: batch_norm.cpp  conv2d.cpp  dropout.cpp  layer_norm.cpp  linear.cpp  module.cpp  module_utils.cpp  sequential.cpp
src/ops/: activation.cpp  convolution.cpp  elementwise.cpp  linalg.cpp  loss.cpp  math.cpp  pooling.cpp  reduction.cpp  shape.cpp
src/optim/: adam.cpp  adamw.cpp  clip_grad.cpp  grad_clip.cpp  lr_scheduler.cpp  rmsprop.cpp  sgd.cpp
src/serialize/: state_dict.cpp
src/tensor/: shape.cpp  storage.cpp  strides.cpp  tensor.cpp
tests/: CMakeLists.txt  test_activation.cpp  test_adam_options.cpp  test_adam_step.cpp  test_adamw.cpp  test_advanced.cpp  test_autograd_accum.cpp  test_autograd_add.cpp  test_autograd_avg_pool2d.cpp  test_autograd_conv2d.cpp  test_autograd_conv2d_groups.cpp  test_autograd_leaky_relu.cpp  test_autograd_matmul.cpp  test_autograd_max_pool2d.cpp  test_autograd_mul.cpp  test_autograd_relu.cpp  test_autograd_softmax.cpp  test_autograd_sum.cpp  test_autograd_tanh.cpp  test_avg_pool2d.cpp  test_backward_retain_graph.cpp  test_batch_norm.cpp  test_batch_norm2d.cpp  test_bce_loss.cpp  test_clip_grad_norm.cpp  test_conv2d.cpp  test_conv2d_dilation.cpp  test_conv2d_groups.cpp  test_cross_entropy.cpp  test_dataloader.cpp  test_dropout.cpp  test_dropout_edge_cases.cpp  test_elementwise.cpp  test_finite_diff_avg_pool2d.cpp  test_finite_diff_batch_norm.cpp  test_finite_diff_batch_norm2d.cpp  test_finite_diff_bce.cpp  test_finite_diff_conv2d.cpp  test_finite_diff_cross_entropy.cpp  test_finite_diff_gelu.cpp  (+50 more)
tools/: synara.cpp
